// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageTitle Component Will display a title and subtitle 1`] = `
<section class="hero is-dark">
  <div class="hero-body">
    <div class="container">
      <p class="title is-capitalized">Title</p>
      <p class="subtitle">A Witty Subtitle</p>
    </div>
  </div>
</section>
`;

exports[`PageTitle Component Will display without a subtitle 1`] = `
<section class="hero is-dark">
  <div class="hero-body">
    <div class="container">
      <p class="title is-capitalized">Title</p>
      <!--v-if-->
    </div>
  </div>
</section>
`;
